; ModuleID = '/home/carl/AnghaBench/tig/src/extr_options.c_commit_order_arg_with_graph.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_options.c_commit_order_arg_with_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@opt_commit_order = common dso_local global i32 0, align 4
@COMMIT_ORDER_AUTO = common dso_local global i32 0, align 4
@GRAPH_DISPLAY_NO = common dso_local global i32 0, align 4
@COMMIT_ORDER_TOPO = common dso_local global i32 0, align 4
@commit_order_arg_map = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @commit_order_arg_with_graph(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @opt_commit_order, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @COMMIT_ORDER_AUTO, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @GRAPH_DISPLAY_NO, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i32, i32* @COMMIT_ORDER_TOPO, align 4
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %12, %8, %1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @commit_order_arg_map, align 8
  %16 = load i32, i32* %3, align 4
  %17 = zext i32 %16 to i64
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i8*, i8** %19, align 8
  ret i8* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
